chart/manifest/0002-core-dns.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: host-dns
  namespace: host-dns
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: core-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coredns
    helm.sh/chart: coredns-1.19.7
  name: core-dns-coredns
  namespace: host-dns
spec:
  ports:
    - name: udp-53
      port: 53
      protocol: UDP
    - name: tcp-53
      port: 53
      protocol: TCP
  selector:
    app.kubernetes.io/instance: core-dns
    app.kubernetes.io/name: coredns
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: core-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coredns
    app.kubernetes.io/version: 1.9.4
    helm.sh/chart: coredns-1.19.7
  name: core-dns-coredns
  namespace: host-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: core-dns
      app.kubernetes.io/name: coredns
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: d100ee76529a8a3a3c96db8d8a1fd142903714cc3fbcdf91ff1af824372b1fe1
      labels:
        app.kubernetes.io/instance: core-dns
        app.kubernetes.io/name: coredns
    spec:
      containers:
        - args:
            - -conf
            - /etc/coredns/Corefile
          image: coredns/coredns:1.9.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: coredns
          ports:
            - containerPort: 53
              name: udp-53
              protocol: UDP
            - containerPort: 53
              name: tcp-53
              protocol: TCP
            - containerPort: 9153
              name: tcp-9153
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: 8181
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /etc/coredns
              name: config-volume
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            items:
              - key: Corefile
                path: Corefile
            name: core-dns-coredns
          name: config-volume
