chart/manifest/0002-etcd-dns.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: host-dns
  namespace: host-dns
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: etcd-dns
  name: etcd-dns
  namespace: host-dns
spec:
  ports:
    - name: etcd-client
      port: 2379
      protocol: TCP
    - name: etcd-peer
      port: 2380
      protocol: TCP
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: etcd-dns
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: etcd-dns
  name: etcd-dns
  namespace: host-dns
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: etcd-dns
  serviceName: etcd-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: etcd-dns
      name: etcd-dns
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - |-
              IP=$(hostname -i)
              PEERS=""
              for i in $(seq 0 $((${CLUSTER_SIZE} - 1))); do
                PEERS="${PEERS}${PEERS:+,}${SET_NAME}-${i}=http://${SET_NAME}-${i}.${SET_NAME}:2380"
              done

              exec /usr/local/bin/etcd --name ${HOSTNAME} \
                --listen-peer-urls http://${IP}:2380 \
                --listen-client-urls http://${IP}:2379,http://127.0.0.1:2379 \
                --advertise-client-urls http://${HOSTNAME}.${SET_NAME}:2379 \
                --initial-advertise-peer-urls http://${HOSTNAME}.${SET_NAME}:2380 \
                --initial-cluster-token etcd-cluster-1 \
                --initial-cluster ${PEERS} \
                --initial-cluster-state new \
                --data-dir /var/run/etcd/default.etcd
          image: quay.io/coreos/etcd:latest
          name: etcd-dns
          ports:
            - containerPort: 2379
              name: client
            - containerPort: 2380
              name: peer
          volumeMounts:
            - mountPath: /var/run/etcd
              name: datadir
  volumeClaimTemplates:
    - metadata:
        labels:
          app.kubernetes.io/component: app
          app.kubernetes.io/name: etcd-dns
        name: datadir
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1G
