chart/manifest/0005-harbor.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-chartmuseum
  namespace: harbor
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    app: harbor
    component: chartmuseum
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-core
  namespace: harbor
spec:
  ports:
    - name: http-web
      port: 80
      targetPort: 8080
  selector:
    app: harbor
    component: core
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-database
  namespace: harbor
spec:
  ports:
    - port: 5432
  selector:
    app: harbor
    component: database
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-jobservice
  namespace: harbor
spec:
  ports:
    - name: http-jobservice
      port: 80
      targetPort: 8080
  selector:
    app: harbor
    component: jobservice
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-notary-server
  namespace: harbor
spec:
  ports:
    - port: 4443
  selector:
    app: harbor
    component: notary-server
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-notary-signer
  namespace: harbor
spec:
  ports:
    - port: 7899
  selector:
    app: harbor
    component: notary-signer
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-portal
  namespace: harbor
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: harbor
    component: portal
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-redis
  namespace: harbor
spec:
  ports:
    - port: 6379
  selector:
    app: harbor
    component: redis
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-registry
  namespace: harbor
spec:
  ports:
    - name: http-registry
      port: 5000
    - name: http-controller
      port: 8080
  selector:
    app: harbor
    component: registry
    release: harbor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-trivy
  namespace: harbor
spec:
  ports:
    - name: http-trivy
      port: 8080
      protocol: TCP
  selector:
    app: harbor
    component: trivy
    release: harbor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: chartmuseum
    heritage: Helm
    release: harbor
  name: harbor-chartmuseum
  namespace: harbor
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: harbor
      component: chartmuseum
      release: harbor
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap: 3a145cb777903ca8ff8fcfcb3c25ed9ee7a426a8b01cf024d6e52d92458b4564
        checksum/secret: a656851d5f972f5f6dd05a5c13a5a0b21527971b9ec7dd91ce85b5699d41790a
        checksum/secret-core: 3839eb5ae43709d9b8cbcf204866758f268cb71c4127b5294f9eca69bdb54ca0
      labels:
        app: harbor
        chart: harbor
        component: chartmuseum
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: BASIC_AUTH_PASS
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: harbor-core
            - name: AWS_SDK_LOAD_CONFIG
              value: "1"
          image: goharbor/chartmuseum-photon:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 9999
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
          name: chartmuseum
          ports:
            - containerPort: 9999
          readinessProbe:
            httpGet:
              path: /health
              port: 9999
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 10
          volumeMounts:
            - mountPath: /chart_storage
              name: chartmuseum-data
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
      volumes:
        - name: chartmuseum-data
          persistentVolumeClaim:
            claimName: harbor-chartmuseum
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: core
    heritage: Helm
    release: harbor
  name: harbor-core
  namespace: harbor
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: harbor
      component: core
      release: harbor
  template:
    metadata:
      annotations:
        checksum/configmap: 6c44700003d090140872c2c92522a38351d5d23cba07570f3dbc258b6123063f
        checksum/secret: a223dc2809f360fef43f6655eed62f84cb9b9962c19b0e8bdda769bd228e1708
        checksum/secret-jobservice: 8a0f8ee2f5f4f8c854985521289d4b4c1618f4b2cd397346bac0d7fda42c2874
      labels:
        app: harbor
        component: core
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CORE_SECRET
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: harbor-core
            - name: JOBSERVICE_SECRET
              valueFrom:
                secretKeyRef:
                  key: JOBSERVICE_SECRET
                  name: harbor-jobservice
          image: goharbor/harbor-core:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /api/v2.0/ping
              port: 8080
              scheme: HTTP
            periodSeconds: 10
          name: core
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /api/v2.0/ping
              port: 8080
              scheme: HTTP
            periodSeconds: 10
          startupProbe:
            failureThreshold: 360
            httpGet:
              path: /api/v2.0/ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/core/app.conf
              name: config
              subPath: app.conf
            - mountPath: /etc/core/key
              name: secret-key
              subPath: key
            - mountPath: /etc/core/private_key.pem
              name: token-service-private-key
              subPath: tls.key
            - mountPath: /etc/core/ca
              name: ca-download
            - mountPath: /etc/core/token
              name: psc
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
      terminationGracePeriodSeconds: 120
      volumes:
        - configMap:
            items:
              - key: app.conf
                path: app.conf
            name: harbor-core
          name: config
        - name: secret-key
          secret:
            items:
              - key: secretKey
                path: key
            secretName: harbor-core
        - name: token-service-private-key
          secret:
            secretName: harbor-core
        - name: ca-download
        - emptyDir: {}
          name: psc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: jobservice
    heritage: Helm
    release: harbor
  name: harbor-jobservice
  namespace: harbor
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: harbor
      component: jobservice
      release: harbor
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap: 41138a089428e6776014e59b1a37c5e69bedc9331ccdb1f382f1950882ec1b7e
        checksum/configmap-env: 5c0e2cf333f81a4f19f13c25cb45f2b2f5353c9bd05f59e8cbb6b59cc0eb7195
        checksum/secret: 9c3f6b597edae5b2ce51b169184b8aab77caa5282757f82d2747fbc737a73359
        checksum/secret-core: c9520c89f764453343ebed585776ebbc72d7d91dde8344963011d2b27fbaf20f
      labels:
        app: harbor
        chart: harbor
        component: jobservice
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CORE_SECRET
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: harbor-core
          image: goharbor/harbor-jobservice:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/v1/stats
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
          name: jobservice
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/stats
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/jobservice/config.yml
              name: jobservice-config
              subPath: config.yml
            - mountPath: /var/log/jobs
              name: job-logs
            - mountPath: /var/scandata_exports
              name: job-scandata-exports
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
      terminationGracePeriodSeconds: 120
      volumes:
        - configMap:
            name: harbor-jobservice
          name: jobservice-config
        - name: job-logs
          persistentVolumeClaim:
            claimName: harbor-jobservice
        - name: job-scandata-exports
          persistentVolumeClaim:
            claimName: harbor-jobservice-scandata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: notary-server
    heritage: Helm
    release: harbor
  name: harbor-notary-server
  namespace: harbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor
      component: notary-server
      release: harbor
  template:
    metadata:
      annotations:
        checksum/secret: 312f085e4ba6c1969dd3f9f451bf4721870b9479c36aae9a0494fa265882e779
        checksum/secret-core: f4372310ca893a5d0cb9bc668db81835ac510f9015d55747022715592c3cd3f5
      labels:
        app: harbor
        chart: harbor
        component: notary-server
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: MIGRATIONS_PATH
              value: migrations/server/postgresql
            - name: DB_URL
              valueFrom:
                secretKeyRef:
                  key: NOTARY_SERVER_DB_URL
                  name: harbor-notary-server
          image: goharbor/notary-server-photon:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /_notary_server/health
              port: 4443
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
          name: notary-server
          readinessProbe:
            httpGet:
              path: /_notary_server/health
              port: 4443
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/notary/server-config.postgres.json
              name: config
              subPath: server.json
            - mountPath: /root.crt
              name: token-service-certificate
              subPath: tls.crt
            - mountPath: /etc/ssl/notary/ca.crt
              name: signer-certificate
              subPath: ca.crt
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
      volumes:
        - name: config
          secret:
            secretName: harbor-notary-server
        - name: token-service-certificate
          secret:
            secretName: harbor-core
        - name: signer-certificate
          secret:
            secretName: harbor-notary-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: notary-signer
    heritage: Helm
    release: harbor
  name: harbor-notary-signer
  namespace: harbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor
      component: notary-signer
      release: harbor
  template:
    metadata:
      annotations:
        checksum/secret: b95d5b36f547a82901f287150a855289b4ddc8ebad7986ef09b822754b559a17
      labels:
        app: harbor
        chart: harbor
        component: notary-signer
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: MIGRATIONS_PATH
              value: migrations/signer/postgresql
            - name: DB_URL
              valueFrom:
                secretKeyRef:
                  key: NOTARY_SIGNER_DB_URL
                  name: harbor-notary-server
            - name: NOTARY_SIGNER_DEFAULTALIAS
              value: defaultalias
          image: goharbor/notary-signer-photon:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 7899
              scheme: HTTPS
            initialDelaySeconds: 300
            periodSeconds: 10
          name: notary-signer
          readinessProbe:
            httpGet:
              path: /
              port: 7899
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/notary/signer-config.postgres.json
              name: config
              subPath: signer.json
            - mountPath: /etc/ssl/notary/tls.crt
              name: signer-certificate
              subPath: tls.crt
            - mountPath: /etc/ssl/notary/tls.key
              name: signer-certificate
              subPath: tls.key
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
      volumes:
        - name: config
          secret:
            secretName: harbor-notary-server
        - name: signer-certificate
          secret:
            secretName: harbor-notary-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: portal
    heritage: Helm
    release: harbor
  name: harbor-portal
  namespace: harbor
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: harbor
      component: portal
      release: harbor
  template:
    metadata:
      labels:
        app: harbor
        component: portal
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - image: goharbor/harbor-portal:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
          name: portal
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: portal-config
              subPath: nginx.conf
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
      volumes:
        - configMap:
            name: harbor-portal
          name: portal-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor
    chart: harbor
    component: registry
    heritage: Helm
    release: harbor
  name: harbor-registry
  namespace: harbor
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: harbor
      component: registry
      release: harbor
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap: 1dd422c1f80f9b0e00e1a2297e956c1da3fb1d6bc24892179accf38bc1e3be96
        checksum/secret: 4544b7806f1619c89a81d6451fda52ba08bc3e2154b5589583ba5e7577fbd2d8
        checksum/secret-core: c14c5d2ec6dda961e320afa429a93d0561fa2af520fd3fe0cf0486e80128ea70
        checksum/secret-jobservice: 987a08639e0e8425f3f8ed8ebc289686fad278376070c282879b9056ae6d74de
      labels:
        app: harbor
        chart: harbor
        component: registry
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - serve
            - /etc/registry/config.yml
          image: goharbor/registry-photon:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
          name: registry
          ports:
            - containerPort: 5000
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 10
          volumeMounts:
            - mountPath: /storage
              name: registry-data
            - mountPath: /etc/registry/passwd
              name: registry-htpasswd
              subPath: passwd
            - mountPath: /etc/registry/config.yml
              name: registry-config
              subPath: config.yml
        - env:
            - name: CORE_SECRET
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: harbor-core
            - name: JOBSERVICE_SECRET
              valueFrom:
                secretKeyRef:
                  key: JOBSERVICE_SECRET
                  name: harbor-jobservice
          image: goharbor/harbor-registryctl:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
          name: registryctl
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 10
          volumeMounts:
            - mountPath: /storage
              name: registry-data
            - mountPath: /etc/registry/config.yml
              name: registry-config
              subPath: config.yml
            - mountPath: /etc/registryctl/config.yml
              name: registry-config
              subPath: ctl-config.yml
      securityContext:
        fsGroup: 10000
        fsGroupChangePolicy: OnRootMismatch
        runAsUser: 10000
      terminationGracePeriodSeconds: 120
      volumes:
        - name: registry-htpasswd
          secret:
            items:
              - key: REGISTRY_HTPASSWD
                path: passwd
            secretName: harbor-registry-htpasswd
        - configMap:
            name: harbor-registry
          name: registry-config
        - name: registry-data
          persistentVolumeClaim:
            claimName: harbor-registry
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: harbor
    chart: harbor
    component: database
    heritage: Helm
    release: harbor
  name: harbor-database
  namespace: harbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor
      component: database
      release: harbor
  serviceName: harbor-database
  template:
    metadata:
      annotations:
        checksum/secret: 55b1e7be0855a53d12362dc11834f575bd16ba09cdd84b0551bda85635e15ac1
      labels:
        app: harbor
        chart: harbor
        component: database
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: goharbor/harbor-db:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /docker-healthcheck.sh
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 1
          name: database
          readinessProbe:
            exec:
              command:
                - /docker-healthcheck.sh
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-data
            - mountPath: /dev/shm
              name: shm-volume
      securityContext:
        fsGroup: 999
        runAsUser: 999
      terminationGracePeriodSeconds: 120
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 512Mi
          name: shm-volume
  volumeClaimTemplates:
    - metadata:
        labels:
          app: harbor
          chart: harbor
          heritage: Helm
          release: harbor
        name: database-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: harbor
    chart: harbor
    component: redis
    heritage: Helm
    release: harbor
  name: harbor-redis
  namespace: harbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor
      component: redis
      release: harbor
  serviceName: harbor-redis
  template:
    metadata:
      labels:
        app: harbor
        chart: harbor
        component: redis
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - image: goharbor/redis-photon:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 300
            periodSeconds: 10
            tcpSocket:
              port: 6379
          name: redis
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 10
            tcpSocket:
              port: 6379
          volumeMounts:
            - mountPath: /var/lib/redis
              name: data
      securityContext:
        fsGroup: 999
        runAsUser: 999
      terminationGracePeriodSeconds: 120
  volumeClaimTemplates:
    - metadata:
        labels:
          app: harbor
          chart: harbor
          heritage: Helm
          release: harbor
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: harbor
    chart: harbor
    component: trivy
    heritage: Helm
    release: harbor
  name: harbor-trivy
  namespace: harbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor
      component: trivy
      release: harbor
  serviceName: harbor-trivy
  template:
    metadata:
      annotations:
        checksum/secret: 81105cb33a8cb2937d69d3a39d46a94953951b6154c8518d288852bcf66b4d6d
      labels:
        app: harbor
        chart: harbor
        component: trivy
        heritage: Helm
        release: harbor
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: HTTP_PROXY
              value: ""
            - name: HTTPS_PROXY
              value: ""
            - name: NO_PROXY
              value: harbor-core,harbor-jobservice,harbor-database,harbor-chartmuseum,harbor-notary-server,harbor-notary-signer,harbor-registry,harbor-portal,harbor-trivy,harbor-exporter,127.0.0.1,localhost,.local,.internal
            - name: SCANNER_LOG_LEVEL
              value: info
            - name: SCANNER_TRIVY_CACHE_DIR
              value: /home/scanner/.cache/trivy
            - name: SCANNER_TRIVY_REPORTS_DIR
              value: /home/scanner/.cache/reports
            - name: SCANNER_TRIVY_DEBUG_MODE
              value: "false"
            - name: SCANNER_TRIVY_VULN_TYPE
              value: os,library
            - name: SCANNER_TRIVY_TIMEOUT
              value: 5m0s
            - name: SCANNER_TRIVY_GITHUB_TOKEN
              valueFrom:
                secretKeyRef:
                  key: gitHubToken
                  name: harbor-trivy
            - name: SCANNER_TRIVY_SEVERITY
              value: UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL
            - name: SCANNER_TRIVY_IGNORE_UNFIXED
              value: "false"
            - name: SCANNER_TRIVY_SKIP_UPDATE
              value: "false"
            - name: SCANNER_TRIVY_OFFLINE_SCAN
              value: "false"
            - name: SCANNER_TRIVY_SECURITY_CHECKS
              value: vuln
            - name: SCANNER_TRIVY_INSECURE
              value: "false"
            - name: SCANNER_API_SERVER_ADDR
              value: :8080
            - name: SCANNER_REDIS_URL
              valueFrom:
                secretKeyRef:
                  key: redisURL
                  name: harbor-trivy
            - name: SCANNER_STORE_REDIS_URL
              valueFrom:
                secretKeyRef:
                  key: redisURL
                  name: harbor-trivy
            - name: SCANNER_JOB_QUEUE_REDIS_URL
              valueFrom:
                secretKeyRef:
                  key: redisURL
                  name: harbor-trivy
          image: goharbor/trivy-adapter-photon:v2.7.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /probe/healthy
              port: api-server
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
          name: trivy
          ports:
            - containerPort: 8080
              name: api-server
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /probe/ready
              port: api-server
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - mountPath: /home/scanner/.cache
              name: data
              readOnly: false
      securityContext:
        fsGroup: 10000
        runAsUser: 10000
  volumeClaimTemplates:
    - metadata:
        labels:
          app: harbor
          chart: harbor
          heritage: Helm
          release: harbor
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress
  namespace: harbor
spec:
  ingressClassName: nginx
  rules:
    - host: harbor.lab9.cloud
      http:
        paths:
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /api/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /service/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /v2/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /chartrepo/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /c/
            pathType: Prefix
          - backend:
              service:
                name: harbor-portal
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - harbor.lab9.cloud
      secretName: harbor-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress-notary
  namespace: harbor
spec:
  ingressClassName: nginx
  rules:
    - host: notary.lab9.cloud
      http:
        paths:
          - backend:
              service:
                name: harbor-notary-server
                port:
                  number: 4443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - notary.lab9.cloud
      secretName: harbor-tls
